[package]
name = "rjsi-core"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
smallvec.workspace = true
bytes.workspace = true

[dev-dependencies]
criterion = "0.8.2"
rjsi-quickjs = { path = "../rjsi-quickjs" }

[[bench]]
name = "core_paths"
harness = false

[[bench]]
name = "ergo_paths"
harness = false
