[package]
name = "rjsi-hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
rjsi-core = { path = "../rjsi-core" }
anyhow.workspace = true
hermes = { path = "../hermes" }
hermes-sys = { path = "../hermes-sys" }
libc = "0.2"

[dev-dependencies]
rjsi-conformance = { path = "../rjsi-conformance" }
