[package]
name = "rjsi-jsc"
version = "0.1.0"
edition = "2024"

[dependencies]
rjsi-core = { path = "../rjsi-core" }
anyhow.workspace = true
javascriptcore-sys = { path = "../javascriptcore-sys" }
smallvec.workspace = true

[dev-dependencies]
rjsi-console = { path = "../rjsi-console" }
rjsi-conformance = { path = "../rjsi-conformance" }
