[package]
name = "rjsi-quickjs"
version = "0.1.0"
edition = "2024"

[dependencies]
rjsi-core = { path = "../rjsi-core" }
anyhow.workspace = true
rquickjs = { version = "0.11.0", features = ["properties", "loader", "array-buffer"] }
rquickjs-sys = { version = "0.11.0" }
smallvec.workspace = true

[dev-dependencies]
criterion = "0.8.2"
rjsi-console = { path = "../rjsi-console" }
rjsi-conformance = { path = "../rjsi-conformance" }
rjsi-macros = { path = "../rjsi-macros" }
