[package]
name = "rjsi-v8"
version = "0.1.0"
edition = "2024"

[dependencies]
rjsi-core = { path = "../rjsi-core" }
v8 = ">=140.2.0, <142.0.0"
timezone_provider = "=0.0.11"

[dev-dependencies]
criterion = "0.8.2"
rjsi-console = { path = "../rjsi-console" }
rjsi-conformance = { path = "../rjsi-conformance" }
