[package]
name = "rjsi"
version = "0.1.0"
edition = "2024"

[features]
default = []
quickjs = ["dep:rjsi-quickjs"]
v8 = ["dep:rjsi-v8"]
jsc = ["dep:rjsi-jsc"]
console = ["dep:rjsi-console"]
macros = ["dep:rjsi-macros"]

[[example]]
name = "hello_world"
required-features = ["quickjs"]

[[example]]
name = "add"
required-features = ["quickjs"]

[[example]]
name = "console"
required-features = ["quickjs", "console"]

[[example]]
name = "host_function"
required-features = ["quickjs"]

[[example]]
name = "host_function_macros"
required-features = ["quickjs", "macros"]

[dependencies]
anyhow.workspace = true
tracing.workspace = true
rjsi-core = { path = "../rjsi-core" }
rjsi-macros = { path = "../rjsi-macros", optional = true }
rjsi-quickjs = { path = "../rjsi-quickjs", optional = true }
rjsi-v8 = { path = "../rjsi-v8", optional = true }
rjsi-console = { path = "../rjsi-console", optional = true }
rjsi-jsc = { path = "../rjsi-jsc", optional = true }
